<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="nezukoextra_title">Nezuko Extras</string>
    <string name="nezukoextra_summary">Time to slay some demons.</string>
    <string name="dialog_team_title">The team</string>
    <string name="lead_title">Lead Developer</string>
    <string name="developer_title">Developer</string>
    <string name="maintainer_title">Maintainer</string>
    <string name="contributor_title">Contributor</string>
    <string name="contributor_main_title">Maintainer/Contributor</string>
    <string name="navigation_system_title">System</string>
    <string name="navigation_lockscreen_title">Lockscreen</string>
    <string name="navigation_statusbar_title">Statusbar</string>
    <string name="navigation_hardware_title">Hardware</string>
    <string name="navigation_multitasking_title">Multitasking</string>
    <string name="miscellaneous_title">Miscellaneous</string>
    <string name="miscellaneous_summary">Miscellaneous tweaks</string>
    <string name="powermenu_title">Power menu</string>
    <string name="powermenu_summary">Configure the power menu</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_summary">Tweaks specific to system notifications</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="lockscreen">Lockscreen</string>
    <string name="fingerprint_prefs_title">Fingerprint prefs</string>
    <string name="fingerprint_prefs_summary">Tweaks specific to the fingerprint scanner</string>
    <string name="lockscreen_items_title">Lockscreen items</string>
    <string name="lockscreen_items_summary">Customize the lockscreen</string>
    <string name="switch_settings_title">Misc lockscreen settings</string>
    <string name="lockscreen_lock_icon_title">Lock icon</string>
    <string name="lockscreen_lock_icon_summary">Display lock icon on the lockscreen</string>
    <string name="lockscreen_status_bar_title">Status bar</string>
    <string name="lockscreen_status_bar_summary">Display status bar on the lockscreen</string>
    <string name="statusbar_clock">Clock</string>
    <string name="battery_options_title">Battery options</string>
    <string name="battery_options_summary">Customize the statusbar battery</string>
    <string name="carrier_label_title">Carrier label</string>
    <string name="carrier_label_summary">Customize the carrier label on the lockscreen or statusbar</string>
    <string name="clock_options_title">Clock options</string>
    <string name="clock_options_summary">Customize your statusbar clock</string>
    <string name="icon_manager_title">Icon manager</string>
    <string name="icon_manager_summary">Configure the visibility of statusbar items</string>
    <string name="quicksettings_title">Quick settings</string>
    <string name="quicksettings_summary">Configure the layout of the quick settings area</string>
    <string name="traffic_title">Network Traffic Indicator</string>
    <string name="traffic_indicators">Traffic Indicator</string>
    <string name="traffic_summary">Show live network traffic usage on Statusbar or in QS.</string>
    <string name="switch_category">Advanced Tweaks</string>
    <string name="battery_title">Battery</string>
    <string name="qs">Quick Settings</string>
    <string name="icons">Statusbar icons</string>
    <string name="headericons">Header Icons</string>
    <string name="UI">User Interface</string>
    <string name="general_title">Notifications</string>
    <string name="notification_guts_kill_app_button_title">Kill app button</string>
    <string name="notification_guts_kill_app_button_summary">Show a kill app button in the notification\'s longpress menu</string>
    <string name="qs_tiles_title">Tiles</string>
    <string name="qs_bg_use_disco">QS tile disco</string>
    <string name="qs_bg_use_disco_summary">Make your QS Tiles colorful!</string>
    <string name="buttons_title">Buttons</string>
    <string name="buttons_summary">Configure volume rocker options</string>
    <string name="navigation_options_title">Navigation</string>
    <string name="navigation_options_summary">Configure navigation options</string>
    <string name="network_traffic_settings_title">Network traffic monitor</string>
    <string name="network_traffic_settings_summary">Display and customize current network traffic levels</string>
    <string name="network_traffic_location_title">Location</string>
    <string name="network_traffic_location_disable">Disabled</string>
    <string name="network_traffic_location_statusbar">Statusbar</string>
    <string name="network_traffic_location_quick_statusbar">Quick Statusbar</string>
    <string name="network_traffic_mode_title">Display mode</string>
    <string name="network_traffic_mode_up">Upload only</string>
    <string name="network_traffic_mode_down">Download only</string>
    <string name="network_traffic_mode_all">Upload and download</string>
    <string name="network_traffic_autohide">Auto hide</string>
    <string name="network_traffic_autohide_summary">Hide the traffic monitor when inactive</string>
    <string name="network_traffic_autohide_kilobits">Kb/s</string>
    <string name="network_traffic_autohide_kilobytes">KB/s</string>
    <string name="network_traffic_autohide_threshold">Inactivity threshold</string>
    <string name="network_traffic_show_units">Show units</string>
    <string name="network_traffic_show_units_summary">Whether to show traffic measurement units</string>
    <string name="network_traffic_units_title">Traffic measurement units</string>
    <string name="network_traffic_units_bits">Bits per second (b/s)</string>
    <string name="network_traffic_units_kilobits">Kilobits per second (kb/s)</string>
    <string name="network_traffic_units_megabits">Megabits per second (Mb/s)</string>
    <string name="network_traffic_units_bytes">Bytes per second (B/s)</string>
    <string name="network_traffic_units_kilobytes">Kilobytes per second (kB/s)</string>
    <string name="network_traffic_units_megabytes">Megabytes per second (MB/s)</string>
    <string name="network_traffic_hidearrow">Hide arrows</string>
    <string name="network_traffic_hidearrow_summary">Hide the network traffic indicator arrows</string>
    <string name="network_traffic_refresh_interval_title">Refresh interval</string>
    <string name="network_traffic_refresh_interval_summary">Duration after which speed is remeasured</string>
    <string name="unit_seconds">seconds</string>
    <string name="buttons">Buttons</string>
    <string name="volume_stuff_title">Volume Button</string>
    <string name="volume_rocker_wake_title">Wake device</string>
    <string name="volume_rocker_wake_summary">Press volume keys to wake your device</string>
    <string name="lockscreen_media_category">Music/Media</string>
    <string name="use_old_mobiletype_title">Old mobiletype</string>
    <string name="use_old_mobiletype_summary">Use pre-p mobiletype icons for signal (Reboot required)</string>
    <string name="data_disabled_icon_title">Data disabled icon</string>
    <string name="data_disabled_icon_summary">Display a cross sign next to signal bar when data is disabled</string>
    <string name="roaming_indicator_icon_title">Roaming indicator</string>
    <string name="roaming_indicator_icon_summary">Display the roaming indicator in signal icon when in roaming mode</string>
    <string name="display_cutout_force_fullscreen_title">Full screen apps</string>
    <string name="display_cutout_force_fullscreen_summary">Force apps to ignore notch space</string>
    <string name="translucent_lockscreen_notifications_bg_title">Translucent notifications background</string>
    <string name="show_fourg_title">Show 4G instead of LTE</string>
    <string name="show_fourg_summary">Replaces LTE statusbar indicators with 4G</string>
    <string name="volte_icon_style_title">Select VoLTE Icon</string>
    <string name="themer_title">Themer</string>
    <string name="qs_bg_use_new_tint">Tint QS tiles</string>
    <string name="qs_bg_use_new_tint_summary">Choose the QS Tint Style</string>
    <string name="qs_themes_category_title">QS Themes</string>
    <string name="custom_header_summary">Display image at top of the notification panel</string>
    <string name="custom_header_title">Custom header</string>
    <string name="fod_night_light_title">Disable night light when showing FOD</string>
    <string name="fod_night_light_summary">Disable night light on lockscreen if FOD is active. Disabling this option might affect your fingerprint accuracy with night light on.</string>
    <string name="ss">Screenshot</string>
    <string name="click_partial_screenshot_title">Click to partial screenshot</string>
    <string name="click_partial_screenshot_summary">Short click Volume Down and Power to take partial screenshot</string>
    <string name="click_partial_screenshot_invert_title">Partial screenshot on long press</string>
    <string name="click_partial_screenshot_invert_summary">Long press Volume Down and Power to take partial screenshot.</string>
    <string name="theme_type_title">System theme</string>
    <string name="theme_type_summary">Select theme</string>
    <string name="themes_info">You might be wondering why you are here.</string>
    <string name="themes_summary">We bought you here to an almost empty page so that you can take a good look at the themes.</string>
    <string name="gvisual_title">G-Visual Mods</string>
    <string name="rounded_ui_title">Rounded corner</string>
    <string name="rounded_ui_dialog_title">Select rounded corner model</string>
    <string name="statusbar_height_title">Statusbar height</string>
    <string name="statusbar_height_dialog_title">Select statusbar height model</string>
    <string name="navbar_color_title">Navbar Colors</string>
    <string name="navbar_color_dialog_title">Select color</string>
    <string name="qs_columns_rows_category_title">QS columns and rows</string>
    <string name="qs_rows_portrait_title">Tiles rows on portrait</string>
    <string name="qs_rows_landscape_title">Tiles rows on landscape</string>
    <string name="qs_columns_portrait_title">Tiles columns on portrait</string>
    <string name="qs_columns_landscape_title">Tiles columns on landscape</string>
    <string name="power_button_category_title">Power Button</string>
    <string name="global_actions_title">Power menu</string>
    <string name="global_actions_summary">Select what to show when you press the power button</string>
    <string name="global_actions_advanced_reboot_title">Enable advanced restart</string>
    <string name="global_actions_advanced_reboot_summary">When restarting also show options for recovery and bootloader</string>
   <string name="battery_percentage_title">Battery percentage</string>
    <string name="smart_pixels_title">Smart Pixels</string>
    <string name="smart_pixels_summary">Save battery by shutting off extra pixels</string>
    <string name="animation_title">Animations</string>
    <string name="animation_summary">Change the animation styles</string>
    <string name="qs_datausage_title">Data usage in QS Header</string>
    <string name="fod_recog_animation">Fingerprint animation</string>
    <string name="fod_recog_animation_summary">Shows an animation while reading your finger</string>
    <string name="fod_recog_animation_effect_title">Select fingerprint animation effect</string>
    <string name="fod_pressed_color_title">Fingerprint pressed color</string>
    <string name="pulse_ambient_light_category">Screen edge lighting</string>
    <string name="pulse_ambient_light_summary">Show light pulse on new notification</string>
    <string name="sensor_block_title">Sensor block per-package</string>
    <string name="sensor_block_summary">Block access to certain sensors for some apps to save battery</string>
</resources>