<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017-2019 The Dirty Unicorns Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

     <PreferenceCategory
     android:key="ss_category"
     android:title="@string/ss">


    </PreferenceCategory>

	    <com.nezuko.extra.preferences.SystemSettingSwitchPreference
            android:key="click_partial_screenshot"
            android:title="@string/click_partial_screenshot_title"
            android:summary="@string/click_partial_screenshot_summary"
            android:defaultValue="false" />
        <com.nezuko.extra.preferences.SystemSettingSwitchPreference
            android:key="invert_partial_screenshot"
            android:dependency="click_partial_screenshot"
            android:title="@string/click_partial_screenshot_invert_title"
            android:summary="@string/click_partial_screenshot_invert_summary"
            android:defaultValue="false" />

     <PreferenceCategory
     android:key="power_button_category"
     android:title="@string/power_button_category_title">

     <com.nezuko.extra.preferences.SecureSettingSwitchPreference
         android:key="advanced_reboot"
         android:title="@string/global_actions_advanced_reboot_title"
         android:summary="@string/global_actions_advanced_reboot_summary"
         android:defaultValue="true" />

     <Preference
         android:key="global_actions"
         android:title="@string/global_actions_title"
         android:summary="@string/global_actions_summary"
         android:fragment="com.nezuko.extra.fragments.GlobalActionsSettings" />
    </PreferenceCategory>

    <PreferenceCategory
         android:key="ui"
         android:title="@string/UI">
		
    <!-- Animations -->
    <Preference
        android:key="animations_category"
        android:title="@string/animation_title"
        android:summary="@string/animation_summary"
        android:fragment="com.nezuko.extra.fragments.AnimationSettings"
        />

        <!-- Themes -->
        <Preference
            android:key="theme_category"
            android:title="@string/theme_type_title"
            android:fragment="com.nezuko.extra.fragments.ThemeSettings"
            />
    </PreferenceCategory>

<PreferenceCategory
    android:title="@string/battery_title">

    <!-- Sensor Block -->
    <Preference
        android:key="sensor_block_settings"
        android:title="@string/sensor_block_title"
        android:summary="@string/sensor_block_summary"
        android:fragment="com.nezuko.extra.fragments.SensorBlockSettings"/>

    <!-- Smart Pixels -->
    <Preference
        android:key="smart_pixels_enable"
        android:title="@string/smart_pixels_title"
        android:summary="@string/smart_pixels_summary"
        android:fragment="com.nezuko.extra.fragments.SmartPixels"/>

</PreferenceCategory>

<PreferenceCategory
    android:title="@string/pulse_ambient_light_category">

    <!-- Animations -->
    <Preference
        android:key="pulse_ambient_light"
        android:title="@string/pulse_ambient_light_category"
        android:summary="@string/pulse_ambient_light_summary"
        android:fragment="com.nezuko.extra.fragments.Edge"
        />

</PreferenceCategory>

</PreferenceScreen>
