<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2020 NezukoOS

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/themer_title" >

     <ListPreference
     android:key="theme_switch"
     android:title="@string/theme_type_title"
	 android:summary="%s"
     android:dialogTitle="@string/theme_type_summary"
     android:entries="@array/theme_type_titles"
     android:entryValues="@array/theme_type_values"
     android:defaultValue="1"/>

    <com.nezuko.extra.preferences.SystemSettingSwitchPreference
        android:key="info"
        android:title="@string/themes_info"
        android:summary="@string/themes_summary"
        android:enabled="false"
        android:defaultValue="false" />

    <!-- Gvisual mod -->
    <PreferenceCategory
        android:key="gvisual_category"
        android:title="@string/gvisual_title" >

        <ListPreference
            android:key="statusbar_height"
            android:title="@string/statusbar_height_title"
            android:dialogTitle="@string/statusbar_height_dialog_title"
            android:entries="@array/statusbar_height_titles"
            android:entryValues="@array/statusbar_height_values" />

        <ListPreference
            android:key="rounded_ui"
            android:title="@string/rounded_ui_title"
            android:dialogTitle="@string/rounded_ui_dialog_title"
            android:entries="@array/rounded_ui_titles"
            android:entryValues="@array/rounded_ui_values" />


        <ListPreference
            android:key="navbar_color"
            android:title="@string/navbar_color_title"
            android:summary="%s"
            android:dialogTitle="@string/navbar_color_dialog_title"
            android:entries="@array/navbar_color_titles"
            android:entryValues="@array/navbar_color_values"
            android:defaultValue="1" />

    </PreferenceCategory>

</PreferenceScreen>
