<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017-2019 The Dirty Unicorns Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
            android:title="@string/quicksettings_title" >

    <PreferenceCategory
        android:key="quick_settings_tiles"
        android:title="@string/qs_tiles_title">

    <com.nezuko.extra.preferences.SystemSettingSwitchPreference
            android:key="qs_panel_bg_use_new_tint"
            android:title="@string/qs_bg_use_new_tint"
            android:summary="@string/qs_bg_use_new_tint_summary"
            android:defaultValue="false" />

    <com.nezuko.extra.preferences.SystemSettingSwitchPreference
            android:key="qs_tiles_bg_disco"
            android:title="@string/qs_bg_use_disco"
            android:summary="@string/qs_bg_use_disco_summary"
            android:defaultValue="false" />

     </PreferenceCategory>

    <PreferenceCategory
        android:key="headericons"
        android:title="@string/headericons">

    <!-- QS Header data uasge -->
    <com.nezuko.extra.preferences.SystemSettingListPreference
        android:key="qs_datausage"
        android:title="@string/qs_datausage_title"
        android:entries="@array/qs_datausage_entries"
        android:entryValues="@array/qs_datausage_values"
        android:defaultValue="0" />

    <!-- Battery mode -->
    <com.nezuko.extra.preferences.SystemSettingListPreference
        android:key="qs_battery_mode"
        android:title="@string/battery_percentage_title"
        android:entries="@array/qs_battery_mode_entries"
        android:entryValues="@array/qs_battery_mode_values"
        android:defaultValue="1" />
</PreferenceCategory>
    <PreferenceCategory
        android:key="quick_settings_category"
        android:title="@string/qs_themes_category_title">

        <!-- Custom QS header image -->
        <Preference
            android:key="custom_header"
            android:fragment="com.nezuko.extra.fragments.QsCustomHeaderSettings"
            android:title="@string/custom_header_title"
            android:summary="@string/custom_header_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="qs_columns_rows_category"
        android:title="@string/qs_columns_rows_category_title">

        <com.nezuko.extra.preferences.SystemSettingSeekBarPreference
            android:key="qs_rows_portrait"
            android:title="@string/qs_rows_portrait_title"
            android:max="5"
            android:min="1"
            android:defaultValue="3"
            settings:units="" />

        <com.nezuko.extra.preferences.SystemSettingSeekBarPreference
            android:key="qs_rows_landscape"
            android:title="@string/qs_rows_landscape_title"
            android:max="5"
            android:min="1"
            android:defaultValue="1"
            settings:units="" />

        <com.nezuko.extra.preferences.SystemSettingSeekBarPreference
            android:key="qs_columns_portrait"
            android:title="@string/qs_columns_portrait_title"
            android:max="7"
            android:min="1"
            android:defaultValue="4"
            settings:units="" />

        <com.nezuko.extra.preferences.SystemSettingSeekBarPreference
            android:key="qs_columns_landscape"
            android:title="@string/qs_columns_landscape_title"
            android:max="9"
            android:min="1"
            android:defaultValue="4"
            settings:units="" />
        </PreferenceCategory>

</PreferenceScreen>
