<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017-2019 The Dirty Unicorns Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

        <!-- Quick Settings -->
	<Preference
	     android:key="quicksettings_category"
	     android:title="@string/quicksettings_title"
	     android:fragment="com.nezuko.extra.fragments.QuickSettings"
	     android:icon="@drawable/dt_quicksettings"/>

    <com.nezuko.extra.preferences.SystemSettingSwitchPreference
        android:key="show_fourg"
        android:title="@string/show_fourg_title"
        android:summary="@string/show_fourg_summary"
        android:defaultValue="false" />

	<com.android.settings.custom.preference.SystemSettingListPreference
        android:key="volte_icon_style"
 	   android:title="@string/volte_icon_style_title"
        android:entries="@array/volte_icon_type_entries"
        android:entryValues="@array/volte_icon_type_values"
        android:summary="%s"
	   android:defaultValue="0"/>

	<PreferenceCategory
          android:title="@string/traffic_indicators">

     <Preference
        android:key="traffic_category"
        android:fragment="com.nezuko.extra.fragments.TrafficIndicators"
        android:icon="@drawable/dt_traffic"
        android:title="@string/traffic_title"
        android:summary="@string/traffic_summary" />

     </PreferenceCategory>

</PreferenceScreen>
